<resources>
    <string name="app_name">MediaPlayerExample</string>

    <string name="action_add_resource">Add resource</string>
    <string name="action_is_playlist">Is playlist</string>
    <string name="action_looping">Looping</string>
    <string name="action_enable_scrobbling">Enable scrobbling</string>
    <string name="action_quit">Quit</string>

    <string name="dialog_url_title">Input streaming URL</string>
    <string name="dialog_url_type_text">Is video</string>

    <string name="error_url_incorrect">Incorrect URL</string>
    <string name="error_url_load_failed">Load URL failed</string>
    <string name="error_incorrect_media_file">Incorrect media file: %1s</string>

    <string name="loading">Загрузка…</string>
    <string name="data_missing">Нет данных</string>
    <string name="data_load_failed">Не удалось загрузить данные</string>
    <string name="no_data">@string/data_missing</string>

</resources>
