<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionAddTrack"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="1"
        android:title="@string/action_add_resource"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/actionIsPlaylist"
        android:orderInCategory="2"
        android:checkable="true"
        android:title="@string/action_is_playlist"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="never">
        <!--app:actionViewClass="android.widget.CheckBox"-->
    </item>

    <item
        android:id="@+id/actionLooping"
        android:orderInCategory="3"
        android:checkable="true"
        android:title="@string/action_looping"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="never">
        <!--app:actionViewClass="android.widget.CheckBox"-->
    </item>

    <item
        android:id="@+id/actionEnableScrobbling"
        android:orderInCategory="4"
        android:checkable="true"
        android:title="@string/action_enable_scrobbling"
        android:actionViewClass="android.widget.CheckBox"
        app:showAsAction="never">
        <!--app:actionViewClass="android.widget.CheckBox"-->
    </item>

    <item
        android:id="@+id/actionQuit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="5"
        android:title="@string/action_quit"
        app:showAsAction="ifRoom">
    </item>


</menu>